fixing the img link in the template file and the vertical spacing

--- a/frontendFiles/courseOverview/templateStyles.css
+++ b/frontendFiles/courseOverview/templateStyles.css
@@ -69,5 +69,6 @@
       float: right;
       display: flex;
       flex-direction: column;
-      justify-content: space-around;
+      justify-content: space-evenly;
+      height: 100%;
   }
